--- a/SuperAdmin/Pages/Organization/Organization.razor
+++ b/SuperAdmin/Pages/Organization/Organization.razor
@@ -33,6 +33,9 @@
 					Delete
 				</button>
 			</td>
+			<td>
+				<a href="Department/addnewdepartment/@item.OrgID">Add depart</a>
+			</td>
 		</tr>
 	}
 </table>
