--- a/SuperAdmin/Shared/NavMenu.razor
+++ b/SuperAdmin/Shared/NavMenu.razor
@@ -15,17 +15,32 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Organization/organization">
+            <NavLink class="nav-link" href="org/organizations">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Organizations
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Department/department">
+            <NavLink class="nav-link" href="dept/department">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Departments
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Faculty/faculty">
+            <NavLink class="nav-link" href="pos/positions">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Position
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="exp/expertise">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Expertise
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="qual/qualifications">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Qualification
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="facl/faculty">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Faculty
             </NavLink>
         </div>
