--- a/SuperAdmin/Pages/Position/AddNewPosition.razor
+++ b/SuperAdmin/Pages/Position/AddNewPosition.razor
@@ -7,7 +7,9 @@
 
 <br />
 <EditForm Model="posModel" OnSubmit="SavePos">
-
+	<br />
+	<label>Title</label>
+	<br />
 	<input type="text" @bind-value="posModel.PosTitle" placeholder="Enter Position Title" />
 	<br />
 	<br />
