--- a/SuperAdmin/Pages/Qualification/AddNewQualification.razor
+++ b/SuperAdmin/Pages/Qualification/AddNewQualification.razor
@@ -8,6 +8,9 @@
 <br />
 <EditForm Model="qualModel" OnSubmit="SaveQual">
 
+	<br />
+	<label>Title</label>
+	<br />
 	<input type="text" @bind-value="qualModel.QualTitle" placeholder="Enter Qualification Title" />
 	<br />
 	<br />
