--- a/SuperAdmin/Pages/Faculty/Faculty.razor
+++ b/SuperAdmin/Pages/Faculty/Faculty.razor
@@ -5,7 +5,7 @@
 <h3>Faculty</h3>
 
 <br />
-<a href="dept/department" class="btn btn-outline-primary btn-sm">Add New Faculty</a>
+<a href="facl/addnewfacl" class="btn btn-outline-primary btn-sm">Add New Faculty</a>
 <br />
 <br />
 <table class="table table-bordered">
