--- a/SuperAdmin/Pages/Faculty/Faculty.razor
+++ b/SuperAdmin/Pages/Faculty/Faculty.razor
@@ -40,6 +40,7 @@
 				<td>@item.DeptID</td>
 				<td>@item.OrgID</td>
 				<td>
+					<a href="facl/addnewfacl/@item.FaclID" class="btn btn-outline-primary btn-sm">Edit</a>
 					<button class="btn btn-outline-danger btn-sm"
 					@onclick="(()=>DeleteOrg(item.FaclID))">
 						Delete
